client/src/pages/Home/home.scss
@import '../../assets/styles/global';

.page-home {
  transition: filter 0.3s linear;

  &__containers-blur {
    display: none;
  }

  &__container-1 {
    height: 85vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  &__container-2 {
    width: 100%;
    height: 70vh;
    text-align: center;
    &__button {
      margin-top: 4rem;
    }
  }

  &__container-1,
  &__container-2 {
    opacity: 0;
    filter: url(#page-home__containers-blur);
    &__title {
      font-size: 2.1rem;
      font-family: $font-infini-regular;
      color: $color-green;
      text-align: center;
      line-height: 2.5rem;
      margin-bottom: 3.5rem;
    }

    &__text {
      font-family: $font-infini-regular;
      color: $color-pink;
      font-size: 1.5rem;
      text-align: center;
      line-height: 1.8rem;
      width: 23.8rem;
      margin: 0 auto 1.5rem auto;
    }
  }
}

